infra/kubernetes/kustomize/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-3:940482441378:certificate/dfc6bb87-7f1a-4248-9d9b-119becacbf10
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: "subnet-04edcb1a3054f255d, subnet-063366423ff1cd64a"
    alb.ingress.kubernetes.io/subnets: subnet-020d1663433984d1c,subnet-0744bb2ff6c2c5f30
    alb.ingress.kubernetes.io/success-codes: 200,307
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443, "HTTP":80}]'
    kubernetes.io/ingress.class: alb
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: argocd.quanianitis.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 443
        pathType: Prefix
